--- a/MauiCollectionView/MainPage.xaml
+++ b/MauiCollectionView/MainPage.xaml
@@ -5,84 +5,40 @@
     BackgroundColor="Black"
     x:Name="TestPage"    
     x:Class="MauiCollectionView.MainPage">
-    <Grid 
-            RowSpacing="0"
-            ColumnSpacing="0"
-            HorizontalOptions="FillAndExpand"
-            VerticalOptions="FillAndExpand"
-            ColumnDefinitions="5*, 5*" 
-            RowDefinitions="10*">
-        <VerticalStackLayout 
-                Grid.Row="0"
-                Grid.Column="0"
-                HorizontalOptions="FillAndExpand"
+    <ScrollView>
+        <VerticalStackLayout
+            HorizontalOptions="FillAndExpand" 
+            VerticalOptions="FillAndExpand">
+            <Grid
+                HorizontalOptions="FillAndExpand" 
                 VerticalOptions="FillAndExpand"
-                BackgroundColor="Black">
-            <VerticalStackLayout
-                    Padding="0,0,0,10">
-                <Label
-                        Text="Height"
-                        TextColor="White"
-                        FontAttributes="Bold"
-                        FontSize="20"/>
-                <Entry 
-                        Text="{Binding SelectedBot.Height}"
-                        TextColor="White"
-                        FontSize="20"/>
-            </VerticalStackLayout>
-            <VerticalStackLayout
-                    Padding="0,0,0,10">
-                <Label
-                        Text="Width"
-                        TextColor="White"
-                        FontAttributes="Bold"
-                        FontSize="20"/>
-                <Entry 
-                        Text="{Binding SelectedBot.Width}"
-                        TextColor="White"
-                        FontSize="20"/>
-            </VerticalStackLayout>
+                ColumnSpacing="0"
+                RowSpacing="0"
+                ColumnDefinitions="10*" 
+                RowDefinitions="2*,5*,3*">
+                <VerticalStackLayout
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    BackgroundColor="Gray"
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="FillAndExpand">
+                </VerticalStackLayout>
+                <VerticalStackLayout
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    BackgroundColor="Brown"
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="FillAndExpand">
+                </VerticalStackLayout>
+                <VerticalStackLayout
+                    Grid.Row="2"
+                    Grid.Column="0"
+                    BackgroundColor="Green"
+                    HorizontalOptions="FillAndExpand"
+                    VerticalOptions="FillAndExpand">
+                </VerticalStackLayout>
+            </Grid>
         </VerticalStackLayout>
-        <CollectionView 
-                Grid.Row="0"
-                Grid.Column="1"
-                ItemsSource="{Binding Bots}"
-                HorizontalOptions="CenterAndExpand" 
-                VerticalOptions="FillAndExpand">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <VerticalStackLayout
-                            HorizontalOptions="FillAndExpand"
-                            VerticalOptions="FillAndExpand"
-                            HeightRequest="{Binding Height}"
-                            WidthRequest="{Binding Width}">
-                        <Label
-                                Text="{Binding Name}"
-                                TextColor="White"
-                                FontAttributes="Bold"
-                                FontSize="20"/>
-                        <VerticalStackLayout.Triggers>
-                            <DataTrigger TargetType="VerticalStackLayout"
-                                             Binding="{Binding IsSelected, Mode=TwoWay}" 
-                                             Value="True">
-                                <Setter Property="BackgroundColor" Value="Orange" />
-                            </DataTrigger>
-                            <DataTrigger TargetType="VerticalStackLayout"
-                                             Binding="{Binding IsSelected, Mode=TwoWay}" 
-                                             Value="False">
-                                <Setter Property="BackgroundColor" Value="Gray" />
-                            </DataTrigger>
-                        </VerticalStackLayout.Triggers>
-                        <VerticalStackLayout.GestureRecognizers>
-                            <TapGestureRecognizer
-                                    Tapped="TapGestureRecognizer_Tapped"
-                                    CommandParameter="{Binding .}"/>
-                        </VerticalStackLayout.GestureRecognizers>
-                    </VerticalStackLayout>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </Grid>
-
+    </ScrollView>
 </ContentPage>
     
